# RaceCarGame

./: CMakeLists.txt  CMakePresets.json
RaceCarGame/cmake_modules/: FindSFML.cmake
RaceCarGame/images/: New Text Document.txt
RaceCarGame/src/: main.cpp
